# TFLM_H723_platform

./: .mxproject  CMakeLists.txt  STM32H723XG_FLASH.ld  network_tflite_data.h
Core/Inc/: entry_point.h  motor.h  network.c  network_tflite_data.h
Core/Src/: entry_point.cpp  main.c  motor.cpp  network.c  tflm_c.cc
Middlewares/: tflm_c.cc
TMP/: tflm_c.cc
cmake/stm32cubemx/: CMakeLists.txt
